--- a/myProjct/en.lproj/Localizable.strings
+++ b/myProjct/en.lproj/Localizable.strings
@@ -24,4 +24,23 @@
 "Shrimp"= "Shrimp" ;
 "detailsProduct6" = "Crispy shrimp with cocktail sauce" ;
 
+"Chicken tikka masala" = "Chicken tikka masala";
+"detailsProduct7" = "Djmsa marsai dish with indian flavor" ;
 
+"Fettuccine" = "Fettuccine" ;
+"detailsProduct8" = "Fettuccine with italian flavor" ;
+
+"Risotto Seafood" = "Risotto Seafood" ;
+"detailsProduct9" = "Risotto with seafood" ;
+
+"Beef Lasagna" = "Beef Lasagna";
+"detailsProduct10" = "Lasagna with fresh meat" ;
+
+"Hot kibok" = "Hot kibok" ;
+"detailsProduct11" = "Chili flavored kibok" ;
+
+"Appetizer mix" = "Appetizer mix" ;
+"detailsProduct12" = "Marssai special appetizer" ;
+
+"Tabbouleh" = "Tabbouleh" ;
+"detailsProduct13" = "Tabbouleh pineapple" ;
