--- a/myProjct/ar-SA.lproj/Localizable.strings
+++ b/myProjct/ar-SA.lproj/Localizable.strings
@@ -21,7 +21,27 @@
 "Crab salad" = "سلطة الكراب" ;
 "detailsProduct5" = "سلطه مرساي الخاصه" ;
 
-"Shrimp" = "الروبيان"
-"detailsProduct6" = "الروبيان المقرمش مع كوكتيل الصوص"
+"Shrimp" = "الروبيان";
+"detailsProduct6" = "الروبيان المقرمش مع كوكتيل الصوص";
 
+"Chicken tikka masala" = "تكا مسالا دجاج";
+"detailsProduct7" = "دجاج مسالا بالنكهه الهندية الاصيله";
+
+"Fettuccine" = "فتوتشيني";
+"detailsProduct8" = "فتوتشيني بالنكهة الايطاليه الاصيله";
+
+"Risotto Seafood" = "روزيتو";
+"detailsProduct9" = "روزيتو بثمار البحر";
+
+"Beef Lasagna" ="ريش لحم" ;
+"detailsProduct10" = "ريش اللحم الطازجة" ;
+
+"Hot kibok" = "كيوبك حار";
+"detailsProduct11" = "كيبوك بنكهة الفلفل الحار" ;
+
+"Appetizer mix" = "مشكل مقبلات" ;
+"detailsProduct12" = "مشكل مقبلات مرساي المميزة";
+
+"Tabbouleh" = "تبوله";
+"detailsProduct13" = "تبوله بالانناس" ;
 
