--- a/PROJECT-2/PROJECT-2/Localizable.strings
+++ b/PROJECT-2/PROJECT-2/Localizable.strings
@@ -5,3 +5,23 @@
   Created by Seham الشطنان on 06/04/1443 AH.
   
 */
+
+"darkChocolate" =  "الشوكولاته الداكنة";
+"brownChocolate" = "شوكولاتة بنية";
+"whiteChocolate" = "شوكولاته بيضاء";
+"proteinChocolate" = "بروتين شوكولاتة";
+"belgianChocolate" = "الشوكولاته البلجيكية";
+"Chocolate" = "شوكولاتة";
+"Name:Bostani" = "الاسم:بستاني";
+"Location" = "موقع";
+"phonenumber" = "رقم الهاتف";
+"Trending" = "الشائع";
+"Bestsellers" = "الأكثر مبيعًا";
+"NewReleases" = "الإصدارات الجديدة";
+
+"Add" = "يضيف";
+"Add product" = "أضف منتج";
+"What's Listofproduct ?" = "ماهي قائمة المنتجات ؟";
+"Input your product here..." = "...ضع منتجك هنا";
+"OK" = "نعم";
+"Trending" = "الشائع";
