--- a/Project-2/Project-2/ar.lproj/Localizable.strings
+++ b/Project-2/Project-2/ar.lproj/Localizable.strings
@@ -20,7 +20,25 @@
 "Wrong Password!" = "كلمة المرور خاطئة!";
 "Retype your password!" = "الرجاء ادخال كلمة المرور!";
 "Please retype your account" = "الرجاء ادخال حسابك بشكل صحيح";
+"Duplex Room : 900SAR" = "غرفة مزدوجة : ٩٠٠ريال";
+"Single Room : 1200SAR" = "غرفة منفردة : ١٢٠٠ريال";
+"Student ID:" = "رقم الطالب :";
+"Student Name:" = "اسم الطالب :";
+"Log Out" = "تسجيل الخروج";
 "NEXT  〉" = "التالي 〉";
+"Profile" = "الملف الشخصي";
+"My Reservations" = "حجوزاتي";
+"Home" = "الرئيسية";
+"Faris Abdullah" = "فارس عبدالله";
+"Abdullah Alanzi" = "عبدالله العنزي";
+"Fahad Saud" = "فهد سعود";
+"Khalid Alshammari" = "خالد الشمري";
+"Mubarak Alqahtani" = "مبارك القحطاني";
+"Abdulaziz alghamdi" = "عبدالعزيز الغامدي";
+"Salem Atallah" = "سالم عطالله";
+"Mohammed Alkaseb" = "محمد الكاسب";
+"Abdulrahman alshehri" = "عبدالرحمن الشهري";
+"Nayef Altmimi" = "نايف التميمي";
 "Abha" = "ابها";
 "Buraydah" = "بريدة";
 "Al Bahah" = "الباحة";
