--- a/project2/project2/ar.lproj/Localizable.strings
+++ b/project2/project2/ar.lproj/Localizable.strings
@@ -15,3 +15,6 @@
 "versele" = "فيسل";
 "Beaphar" = "بيفار";
 "Josera" = "جوزيرا";
+"Error" = "خطا";
+"wrong username or password" = "خطا في الايميل او الباسورد";
+"ok" = "نعم";
