--- a/project2/project2/en.lproj/Localizable.strings
+++ b/project2/project2/en.lproj/Localizable.strings
@@ -15,4 +15,6 @@
 "versele" = "versele";
 "Beaphar" = "Beaphar";
 "Josera" = "Josera";
-
+"Error" = "Error";
+"wrong username or password" = "wrong username or password";
+"ok" = "ok";
