My Seccond Project

--- a/SeccondProject/SeccondProject/ar.lproj/Localizable.strings
+++ b/SeccondProject/SeccondProject/ar.lproj/Localizable.strings
@@ -11,7 +11,7 @@
 "Try Again" = "حاول مجددا";
 
 
-"Are you sure" = "هل انت متاكد؟";
+"Are you sure?" = "هل انت متاكد؟";
 
 
 "Yes" = "نعم";
@@ -19,4 +19,14 @@
 
 "No" = "الغاء";
 
+"AL-Hilal VS AL-Faisly" = "الهلال VS الفيصلي";
 
+"AL-Hilal VS AL-Shabab" = "الهلال VS الشباب";
+
+"AL-Hilal VS AL-Raid" = "الهلال VS الرائد";
+
+"AL-Hilal VS AL-Nassr" = "الهلال VS النصر";
+
+"AL-Hilal VS AL-Ittihad" = "الهلال VS الاتحاد";
+
+"AL-Hilal VS AL-Ahli" = "الهلال VS الاهلي";
