--- a/Project-2/Project-2/ar.lproj/Localizable.strings
+++ b/Project-2/Project-2/ar.lproj/Localizable.strings
@@ -29,10 +29,10 @@
 "Profile" = "الملف الشخصي";
 "My Reservations" = "حجوزاتي";
 "Home" = "الرئيسية";
-"Your Chosen Room :" = "الغرفة التي تم حجزها";
-"Reserve Status :" = "حالة الحجز";
+"Your Chosen Room :" = "الغرفة التي تم حجزها :";
+"Reserve Status :" = "حالة الحجز :";
 "Pending..." = "تحت الاجراء...";
-"Faris Abdullah" = "فارس عبدالله";
+"Nawaf Altmimi" = "نواف التميمي";
 "Abdullah Alanzi" = "عبدالله العنزي";
 "Fahad Saud" = "فهد سعود";
 "Khalid Alshammari" = "خالد الشمري";
