--- a/Project-2/Project-2/ar.lproj/Main.strings
+++ b/Project-2/Project-2/ar.lproj/Main.strings
@@ -106,3 +106,6 @@
 
 /* Class = "UILabel"; text = "Choose Your Address :"; ObjectID = "yTO-9i-AoY"; */
 "yTO-9i-AoY.text" = "اختر عنوانك :";
+"1ez-5e-Aie.title" = "الملف الشخصي";
+"LKa-rC-O5e.title" = "الرئيسية";
+"vbz-jS-PoV.title" = "حجوزاتي";
